--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         background-size: 100% 100%;
         background-repeat:no-repeat;
-        background:url('imagenes/paisaje.jpg');
+        background:url('imagenes/login.jpg');
         background-size: cover;
     }
 </style>
@@ -46,7 +46,7 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Farmacias Bolivia</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Farmacias Bolivia <br> <small>Comercial</small></h1>
                   </div>
                   <form class="user" action="cookie.php" method="post">
                     <div class="form-group">
